# Canny

./: Cargo.toml  README.md
cmd_fontend/: Cargo.toml
cmd_fontend/src/: main.rs
gtk_frontend/: Cargo.toml
gtk_frontend/src/: image.rs  main.rs  section.rs  util.rs
src/: cpu.rs  lib.rs  pipeline.rs  rgba.rs
